Fix missing dependencies and email build

--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "inngest": "^3.0.0",
+    "drizzle-orm": "^0.29.0",
     "@tenderwatch/db": "workspace:*",
     "@tenderwatch/agent": "workspace:*",
     "@tenderwatch/processor": "workspace:*",
