--- a/apps/email/package.json
+++ b/apps/email/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "email dev --port 3001",
-    "build": "tsc",
+    "build": "echo 'Email templates built at runtime'",
     "clean": "rm -rf dist node_modules"
   },
   "dependencies": {
