--- a/packages/billing/package.json
+++ b/packages/billing/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "stripe": "^14.0.0",
+    "drizzle-orm": "^0.29.0",
     "@tenderwatch/db": "workspace:*",
     "@tenderwatch/shared": "workspace:*"
   },
