--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf dist node_modules"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "^0.29.0",
     "postgres": "^3.4.0"
   },
