--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "next": "14.2.0",
     "turbo": "^2.0.0",
     "typescript": "^5.3.0"
   },
